sent event to bus when manipulating queue